# Dynamic-Memory-Allocator-Performance-Visualization-Tool

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  allocator_tests  allocator_tests.cpp  custom_allocator.cpp  custom_allocator.h  data_loader.py  data_logger.cpp  data_logger.h  main  main.cpp  main.py  performance_data.csv  performance_tests  performance_tests.cpp  requirements.txt  stress_test  tempCodeRunnerFile.py  unit_tests  unit_tests.cpp  visualizer.py
.github/workflows/: ci.yml  release.yml
allocator_tests.dSYM/Contents/Resources/DWARF/: allocator_tests
allocator_tests.dSYM/Contents/Resources/Relocations/aarch64/: allocator_tests.yml
config/: default.toml
data/logs/: .gitkeep
data_logger.dSYM/Contents/: Info.plist
data_logger.dSYM/Contents/Resources/DWARF/: data_logger
data_logger.dSYM/Contents/Resources/Relocations/aarch64/: data_logger.yml
docs/: CONTRIBUTING.md
main.dSYM/Contents/Resources/DWARF/: main
main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
reports/: .gitkeep
scripts/: data_loader.py  visualizer.py
src/allocator/: custom_allocator.cpp  custom_allocator.h
src/config/: config_manager.cpp  config_manager.h
src/logger/: data_logger.cpp  data_logger.h
src/main/: main.cpp  main.py
src/tests/: allocator_tests.cpp  performance_tests.cpp  stress_test.cpp  unit_tests.cpp
unit_tests.dSYM/Contents/Resources/DWARF/: unit_tests
unit_tests.dSYM/Contents/Resources/Relocations/aarch64/: unit_tests.yml
